<resources>
    <string name="app_name">Football App</string>
    <string name="title_activity_event_detail">Match Detail</string>
    <string name="versus">vs</string>
    <string name="statistics">Statistics</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="nav_matches">Matches</string>
    <string name="nav_teams">Teams</string>
    <string name="nav_favorites">Favorites</string>
    <string name="iv_home_badge_desc">Home Badge</string>
    <string name="iv_away_badge_desc">Away Badge</string>
    <string name="iv_team_badge_desc">Team Badge</string>
    <string name="iv_notif_desc">Team Badge</string>
    <string name="iv_player_cutout_desc">Player Cutout</string>
    <string name="iv_player_fanart_desc">Player Fanart</string>
    <string name="player_weight">Weight (kg)</string>
    <string name="player_height">Height (cm)</string>
    <string name="tab_next">NEXT</string>
    <string name="tab_past">PAST</string>
    <string name="tab_matches">MATCHES</string>
    <string name="tab_teams">TEAMS</string>
    <string name="tab_overview">OVERVIEW</string>
    <string name="tab_players">PLAYERS</string>
    <string name="calendar_desc">Match between</string>
    <string name="db_name">FavoriteEvent.db</string>
    <string name="err_database">Database problem. Process is terminated</string>
    <string name="err_components">Components are not ready yet. Please try again later</string>
    <string name="err_unknown">Unidentified problem. Process is terminated</string>
    <string name="info_favorite_added">Added to favorite</string>
    <string name="info_favorite_removed">Removed from favorite</string>
</resources>
