<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/mi_matches"
            android:enabled="true"
            android:title="@string/nav_matches"
            android:icon="@drawable/ic_matches"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/mi_teams"
            android:enabled="true"
            android:title="@string/nav_teams"
            android:icon="@drawable/ic_teams"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/mi_favorites"
            android:enabled="true"
            android:icon="@drawable/ic_favorites"
            android:title="@string/nav_favorites"
            app:showAsAction="ifRoom"/>

</menu>