<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cl_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/abl_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
                android:id="@+id/tb_parent"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swipe_refresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:id="@+id/iv_player_fanart"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/iv_player_fanart_desc"/>

                    <LinearLayout
                            android:id="@+id/hl_player_stats"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_below="@id/iv_player_fanart"
                            android:baselineAligned="false">

                        <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:gravity="center">

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/player_weight"
                                    android:textSize="18sp"
                                    android:textColor="@color/colorText"/>

                            <TextView
                                    android:id="@+id/tv_player_weight"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="40sp"
                                    android:textColor="@color/colorAccentAlt"/>
                        </LinearLayout>

                        <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:gravity="center">

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/player_height"
                                    android:textSize="18sp"
                                    android:textColor="@color/colorText"/>

                            <TextView
                                    android:id="@+id/tv_player_height"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="40sp"
                                    android:textColor="@color/colorAccentAlt"/>
                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                            android:id="@+id/tv_player_position"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:layout_marginTop="8dp"
                            android:textSize="20sp"
                            android:textColor="@color/colorText"
                            android:layout_below="@id/hl_player_stats"/>

                    <View
                            android:id="@+id/separator"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/colorAccentAlt"
                            android:layout_below="@id/tv_player_position"/>

                    <TextView
                            android:id="@+id/tv_player_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:layout_below="@id/separator"/>

                    <ProgressBar
                            android:id="@+id/progress_circular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"/>

                </RelativeLayout>

            </ScrollView>

        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>